modified:   tutorial.ipynb

--- a/lessons/thw-shell/tutorial.ipynb
+++ b/lessons/thw-shell/tutorial.ipynb
@@ -79,17 +79,13 @@
       "## The Example: Manipulating Experimental Data Files\n",
       "\n",
       "We will spend most of our time learning about the basics of the shell\n",
-      "by manipulating some experimental data from a hearing test. To get\n",
-      "the data for this test, you will need internet access. Just enter the\n",
-      "command:\n",
+      "by manipulating some experimental data from a hearing test. The data for\n",
+      "the tests should be at the path below, if you haven't already done so you\n",
+      "should execute:\n",
       "\n",
-      "    git clone https://github.com/scopatz/aims-scicomp.git scicomp\n",
+      "    git clone https://github.com/bendmorris/2013-12-12-glasgow.git\n",
       "\n",
-      "Followed by:\n",
-      "\n",
-      "    cd scicomp\n",
-      "\n",
-      "These 2 commands will grab all of the data needed we'll need."
+      "    2013-12-12-glasgow/lessons/thw-shell\n"
      ]
     },
     {
@@ -247,17 +243,17 @@
       "home directory if you are not already there. Then enter the\n",
       "command:\n",
       "\n",
-      "    ls scicomp\n",
+      "    ls 2013-12-12-glasgow\n",
       "\n",
       "This will list the contents of the `scicomp` directory without\n",
       "you having to navigate there. Now enter:\n",
       "\n",
-      "    ls scicomp/thw-shell\n",
+      "    ls 2013-12-12-glasgow/lessons/thw-shell\n",
       "\n",
       "This prints the contents of `thw-shell`. The `cd` command works in a\n",
       "similar way. Try entering:\n",
       "\n",
-      "    cd scicomp/shell\n",
+      "    cd 2013-12-12-glasgow/lessons/thw-shell\n",
       "\n",
       "and you will jump directly to `thw-shell` without having to go through\n",
       "the intermediate directory."
@@ -329,12 +325,12 @@
       "\n",
       "    ls ..\n",
       "\n",
-      "prints the contents of the `/home/swc/scicomp`. You can chain\n",
+      "prints the contents of the `/home/???/2013-12-12-glasgow`. You can chain\n",
       "these together, so:\n",
       "\n",
       "    ls ../../\n",
       "\n",
-      "prints the contents of `/home/me` which is your home\n",
+      "prints the contents of `/home/???` which is your home\n",
       "directory. Finally, the special directory `.` always refers to your\n",
       "current directory. So, `ls`, `ls .`, and `ls ././././.` all do the\n",
       "same thing, they print the contents of the current directory. This may\n",
@@ -547,11 +543,11 @@
       "located right here. So, you can run any program by entering the path\n",
       "to that program. You can run `hello` equally well by specifying:\n",
       "\n",
-      "    /home/me/scicomp/thw-shell/hello\n",
+      "    /home/james/2013-12-12-glasgow/lessons/thw-shell/hello\n",
       "\n",
       "Or by entering:\n",
       "\n",
-      "    ../shell/hello\n",
+      "    ../thw-shell/hello\n",
       "\n",
       "When there are no `/` characters, the shell assumes you want to look\n",
       "in one of the default places for the program."
@@ -592,7 +588,7 @@
       "\n",
       "2.  Without changing directories, (you should still be in `shell`),\n",
       "    use one short command to print the contents of all of the files in\n",
-      "    the `/home/swc/{{page.bootcamp_slug}}/shell/data/thomas` directory.\n",
+      "    the `/home/james/2013-12-12-glasgow/lessons/thw-shell/data/thomas` directory.\n",
       "\n",
       "* * * *"
      ]
@@ -678,7 +674,7 @@
       "Use `>>`, to append the contents of all of the files which contain the\n",
       "number 4 in the directory:\n",
       "\n",
-      "    /home/me/scicomp/thw-shell/data/gerdal\n",
+      "    /home/user_name/2013-12-12-glasgow/lessons/thw-shell/data/gerdal\n",
       "\n",
       "to the existing `all_data` file. Thus, when you are done `all_data`\n",
       "should contain all of the experiment data from Bert and any\n",
